use java.util.Base64.Decoder to decode a string